--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>Order_Record_Page2</members>
+        <name>flexipage</name>
+    </types>
+    <types>
+        <members>kpn_AvailableProducts</members>
+        <members>kpn_AvailableProducts_Test</members>
+        <members>kpn_OrderProducts</members>
+        <members>kpn_OrderProducts_Test</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
+        <members>kpn_AvailableProducts</members>
+        <members>kpn_OrderProducts</members>
         <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
     </types>
     <version>51.0</version>
 </Package>
